fix: horizontal scroll and btn animation fixed

--- a/src/modules/blocks/button/button.scss
+++ b/src/modules/blocks/button/button.scss
@@ -30,7 +30,7 @@ $className: 'button';
   }
 
   &:hover::before {
-    width: 180px;
+    width: 100%;
   }
 
   &:active {
