--- a/src/modules/blocks/header/header.scss
+++ b/src/modules/blocks/header/header.scss
@@ -4,6 +4,7 @@ $className: 'header';
   box-sizing: border-box;
   display: flex;
   position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   width: 100%;
